--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -27,6 +27,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolBar"
+        android:layout_marginBottom="80dp"
         app:navGraph="@navigation/my_nav"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
