--- a/app/src/main/res/layout/cupcakes_layout.xml
+++ b/app/src/main/res/layout/cupcakes_layout.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="8dp"
-    app:cardUseCompatPadding="true"
+    android:layout_marginTop="10dp"
     android:layout_marginHorizontal="8dp"
     app:cardElevation="12dp">
 
