--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -46,6 +46,7 @@
                 android:textSize="30sp"
                 android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@id/materialCardView"
+                app:layout_constraintStart_toStartOf="parent"
                 tools:layout_editor_absoluteX="16dp" />
 
 
@@ -67,6 +68,7 @@
                 android:textSize="30sp"
                 android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@id/donuts_recycler"
+                app:layout_constraintStart_toStartOf="parent"
                 tools:layout_editor_absoluteX="16dp" />
 
 
@@ -87,6 +89,7 @@
                 android:text="Cupcakes"
                 android:textSize="30sp"
                 android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/cakes_recycler"
                 tools:layout_editor_absoluteX="16dp" />
 
@@ -109,6 +112,7 @@
                 android:textSize="30sp"
                 android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@id/cupcakes_recycler"
+                app:layout_constraintStart_toStartOf="parent"
                 tools:layout_editor_absoluteX="16dp"/>
 
 
