--- a/app/src/main/res/layout/pancakes_layout.xml
+++ b/app/src/main/res/layout/pancakes_layout.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="8dp"
-    app:cardUseCompatPadding="true"
+    android:layout_marginTop="10dp"
     android:layout_marginHorizontal="8dp"
     app:cardElevation="12dp">
 
@@ -27,6 +27,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 app:cardCornerRadius="100dp"
+                android:layout_marginTop="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -55,8 +56,8 @@
 
         <TextView
             android:id="@+id/pancake_desc_layout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:padding="8dp"
             android:text="Made with ground oats instead of wheat flour, are a nice alternative if you are staying clear of wheat."
             app:layout_constraintEnd_toEndOf="parent"
